--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,14 @@
   <link href="assets/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
   <!-- Custom Styles-->
   <link href="assets/css/custom-styles.css" rel="stylesheet" />
+  <link href="assets/css/toast.css" rel="stylesheet" />
+  <link href="assets/css/style.css" rel="stylesheet" />
   <!-- Google Fonts-->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
   <link rel="stylesheet" href="assets/js/Lightweight-Chart/cssCharts.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 
   <!-- JS Scripts-->
