update dashboard and job post

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <!-- Morris Chart Styles-->
   <link href="assets/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
   <!-- Custom Styles-->
+  <link href="assets/css/style2.css" rel="stylesheet" />
   <link href="assets/css/custom-styles.css" rel="stylesheet" />
   <link href="assets/css/toast.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
